<resources>
    <string name="app_name">App of quotes</string>
    <string name="Phrase">Phrase</string>
    <string name="Translation">Translation</string>
    <!-- https://www.youtube.com/watch?v=NVGuFdX5guE -->
    <string name="SeasonalTheme">Season of Commitment</string>

    <string name="Memento">Memento Mori</string>
    <string name="MementoE">Remember you are mortal</string>

    <string name="Vincit">Vincit Qui Se Vincit</string>
    <string name="VincitE">He conquers who conquers himself</string>

    <string name="Tempus">Tempus Edax Rerum</string>
    <string name="TempusE">time, devourer of all things</string>

    <string name="Valar">Valar Monghulis</string>
    <string name="ValarE">All men must die</string>

    <!-- Secound fragment -->

    <!-- titles -->
    <string name="r_mor">Morning Routine</string>
    <string name="r_dai">Daily Routine</string>

    <!-- morning tasks -->
    <string name="m_wake">Get Up (before 7.30)</string>
    <string name="m_shower">Shower</string>
    <string name="m_eat">Breakfast</string>
    <string name="m_teeth">Brush teeth</string>
    <string name="m_teeth_face">Brush teeth and face routine</string>
    <string name="m_shave">Shave</string>
    <string name="m_shower_shave">Shower and Shave</string>

    <!-- daily tasks -->
    <string name="d_math">Practice math</string>
    <string name="d_code">Code for one hour</string>
    <string name="d_sleep">Go to bed by 11.00</string>
    <string name="d_diary">Write in Diary</string>

    <!-- titles -->
    <string name="progressTitle">Progression</string>
    <string name="dailyTitle">Daily</string>
    <string name="yesterdayTitle">Yesterday</string>
    <string name="totalTitle">Total</string>

    <!-- string -->
    <string name="editTask">Edit task</string>
    <string name="editText">Edit text</string>
    <string name="newTask">New task</string>
    <string name="holderText">Holder text</string>
    <string name="deleteTask">Delete task</string>
    <string name="removeTask">Remove task</string>
    <string name="generalSettings">General</string>
    <string name="TempTaskTitle">Temporary Tasks</string>

    <!-- create task -->
    <string name="taskName">Task name</string>
    <string name="hobbyTask">Add hobby task</string>
    <string name="hobbyCheckBox">Overwrites task name</string>
    <string name="saveTask">Name ID</string>
    <string name="task">Set object as dynamic</string>
    <string name="taskType">Set task type</string>

    <!-- option holder  -->
    <string name="themeName">Edit theme</string>
    <string name="deleteHobby">Delete selected hobby</string>
    <string name="newHobby">Add a new hobby</string>
    <string name="Author">Author</string>

    <!-- task length types -->
    <string name="taskLength">How long task will be around for</string>
    <string name="taskLengthOneDay">Day length</string>
    <string name="taskLengthPermanent">Permanent length</string>
    <string name="taskPermanent">Permanent</string>
    <string name="taskOneDay">Today</string>
    <string name="taskTomorrow">Tomorrow</string>
    <string name="taskWeekly">Weekly Repeat</string>
    <string name="taskMonthly">Monthly Repeat</string>

    <!-- days -->
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thr">Thr</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>

    <string name="back">Back</string>
    <string name="save">Save</string>

    <string name="textDay">Select day for repeating task</string>
    <string name="title_activity_year_goals">YearGoals</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="yearGoal">Add year goal</string>
    <string name="complete">Completed Task</string>
    <string name="completeGoal">Achieved</string>

    <!-- content description -->
    <string name="cDReset">Reset</string>
    <string name="cDNewTask">New Task</string>

    <!-- alert text -->
    <string name="conformation">Conformation removal of all year goals</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- placeholder -->
    <string name="first_fragment_label">why am I here, only to suffer</string>
    <string name="second_fragment_label">life is pain and misery with the warm embrace of death at the end</string>
</resources>