<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:id="@+id/PopupWindow"
    android:background="@color/grey"
    tools:context=".YearGoals">

    <TextView
        android:id="@+id/addYearGoalTitle"
        android:textSize="25sp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="40dp"
        android:text="@string/yearGoal"
        android:textAlignment="center"
        android:background="@color/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/yearGoalEdit"
        android:layout_width="208dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="17dp"
        android:text="@string/newTask"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/back"
        android:text="@string/save" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="20dp"
        android:text="@string/back" />

</RelativeLayout>