<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="285dp"
    android:id="@+id/PopupWindow"
    tools:context=".YearGoals">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="40dp"
        android:text="@string/yearGoal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="13dp"
        android:layout_toStartOf="@+id/back"
        android:text="@string/save"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="644dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="14dp"
        android:text="@string/back"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="644dp" />


    <EditText
        android:id="@+id/yearGoalEdit"
        android:layout_width="208dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="17dp"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

</RelativeLayout>