<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:id="@+id/background"
    tools:context=".Settings">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="settings"
            android:textAlignment="center"
            android:background="@color/clear"
            android:fontFamily="@font/pinyonscriptregular"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/clear">

                <TableRow>
                    <ImageButton
                        android:id="@+id/TaskDays"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/clear"
                        android:layout_marginStart="8dp"
                        android:onClick="NewTaskFragment"
                        android:src="@drawable/newtask"
                        android:text="@string/newTask" />

                    <ImageButton
                        android:id="@+id/AddTasks"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:background="@color/clear"
                        android:onClick="EditTaskFragment"
                        android:text="@string/editTask"
                        android:src="@drawable/edittask"/>

                    <ImageButton
                        android:id="@+id/GeneralSettings"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="60dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/clear"
                        android:onClick="GeneralFragment"
                        android:text="@string/generalSettings"
                        android:src="@drawable/otheredit"/>
                </TableRow>

            </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- required to have save button at the bottom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/FragmentHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    >

                    <!-- Loads fragments -->

                </FrameLayout>


            </LinearLayout>
        </ScrollView>

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <!-- used to ensure save button is fixed to the bottom of the screen -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TableRow>

                <Button
                    android:id="@+id/Save"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:onClick="taskSettings"
                    />

            </TableRow>
        </TableLayout>
    </RelativeLayout>
</LinearLayout>